--- a/Resources/Private/Partials/Cart/OrderForm/PaymentMethod.html
+++ b/Resources/Private/Partials/Cart/OrderForm/PaymentMethod.html
@@ -1,6 +1,6 @@
 {namespace cart=Extcode\Cart\ViewHelpers}
 
-<div id="payment-method" class="form-block">
+<div id="payment-method" class="bg-light-grey top-buffer">
     <h5 class="form-title">
         <span class="num">3</span>
         <span><f:translate key="tx_cart.controller.order.action.show_cart.block-header.payment_method"/></span>
