--- a/Resources/Private/Partials/Cart/CouponForm.html
+++ b/Resources/Private/Partials/Cart/CouponForm.html
@@ -2,16 +2,13 @@
         name="couponItem"
         action="addCoupon"
         method="post">
-    <div class="form-row">
-        <div class="small-12 medium-12 large-12 form-columns">
-            <div class="form-column">
-                <f:form.textfield type="text" value="" name="couponCode"/>
-
-                <div class="small-6 form-columns">
-                    <f:form.submit class="button"
-                                   value="{f:translate(key: 'tx_cart.add_coupon', default: '[add coupon]')}"/>
-                </div>
-            </div>
+    <div class="row top-buffer">
+        <div class="col-sm-12 col-md-9 col-lg-9">
+            <f:form.textfield class="form-control" type="text" value="" name="couponCode"/>
+        </div>
+        <div class="col-sm-12 col-md-3 col-lg-3">
+            <f:form.submit class="btn btn-default"
+                           value="{f:translate(key: 'tx_cart.add_coupon', default: '[add coupon]')}"/>
         </div>
     </div>
 </f:form>
