--- a/Resources/Private/Partials/Cart/OrderForm/Cart.html
+++ b/Resources/Private/Partials/Cart/OrderForm/Cart.html
@@ -1,4 +1,4 @@
-<div id="checkout-review" class="form-block">
+<div id="checkout-review" class="bg-light-grey">
     <h5 class="form-title">
         <span class="num">5</span>
         <f:translate key="tx_cart.controller.order.action.show_cart.block-header.order_overview"/>
@@ -49,23 +49,32 @@
                     </div>
                 </li>
                 <li>
-                    <label><span><f:translate key="tx_cart_domain_model_order_item.comment"/></span>
-                        <f:form.textarea id="orderItem:comment" name="orderItem[comment]" value="{orderItem.comment}"/>
-                    </label>
+                    <label><span><f:translate key="tx_cart_domain_model_order_item.comment"/></span></label>
+
+                    <f:form.textarea
+                            id="orderItem:comment"
+                            class="form-control"
+                            name="orderItem[comment]"
+                            value="{orderItem.comment}"/>
+
                 </li>
             </ul>
         </fieldset>
+    </div>
 
-        <table id="checkout-review-table" class="data-table" style="width: 100%">
-            <colgroup>
-                <col/>
-                <col width="1"/>
-                <col width="1"/>
-                <col width="1"/>
-            </colgroup>
-            <tbody>
-            <f:render partial="Cart/Summary" arguments="{cart:cart}"/>
-            </tbody>
-        </table>
+    <div class="row">
+        <div class="col-sm-12" style="margin: 10px -10px;">
+            <table id="checkout-review-table" class="data-table" style="width: 100%">
+                <colgroup>
+                    <col/>
+                    <col width="1"/>
+                    <col width="1"/>
+                    <col width="1"/>
+                </colgroup>
+                <tbody>
+                <f:render partial="Cart/OrderForm/Summary" arguments="{cart:cart}"/>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
