--- a/Resources/Private/Templates/Cart/ShowMiniCart.html
+++ b/Resources/Private/Templates/Cart/ShowMiniCart.html
@@ -5,8 +5,8 @@
         <div>
             <span class="count">{cart.count}</span> <f:translate key="tx_cart.plugin.mini_cart.products_in_cart" />
         </div>
-        <div id="link-to-checkout" class="button" style="{f:if(condition:'{cart.count}>0',then:'display: block;',else:'display: none;')}">
-            <f:link.page pageUid="{settings.cart.pid}">
+        <div id="link-to-checkout" class="btn btn-default" style="{f:if(condition:'{cart.count}>0',then:'display: block;',else:'display: none;')}">
+            <f:link.page pageUid="{settings.cart.pid}" class="btn btn-default btn-primary">
                 <f:translate key="tx_cart.plugin.mini_cart.go_to_checkout"/>
             </f:link.page>
         </div>
